--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Morski Klub Łączności "Szkuner" SP2ZIE
+email: sp2zie@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Klub SP2ZIE "Szkuner" to gdyński klub krótkofalarski związany z Uniwersytetem Morskim w Gdyni, 
+  specjalizujący się w łącznościach satelitarnych i znany z przeprowadzenia pierwszej polskiej łączności 
+  z astronautami na Międzynarodowej Stacji Kosmicznej w 2004 roku.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.sp2zie.pl" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username:  sp2zie
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
