Enable jekyll-feed

--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ github_username:  sp2zie
 
 # Build settings
 theme: minima
-# plugins:
-#   - jekyll-feed
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
