Image in page header

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.sp2zie.pl" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  sp2zie
+lang: pl
 
 # Build settings
 theme: minima
