--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: "https://www.sp2zie.pl" # the base hostname & protocol for your site, e.g. 
 # twitter_username: jekyllrb
 github_username:  sp2zie
 lang: pl
+show_excerpts: true
 
 # Build settings
 theme: minima
