--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ url: "https://www.sp2zie.pl" # the base hostname & protocol for your site, e.g. 
 github_username:  sp2zie
 lang: pl
 show_excerpts: true
+collections:
+  news:
+    output: true
 
 # Build settings
 theme: minima
